feat: virtual table
